Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@debugfs_test@read_all_entries - incomplete - BUG: unable to handle page fault for address: ffffc90000bb81a8, RIP: 0010:gen2_read32
<1> [88.829420] BUG: unable to handle page fault for address: ffffc90000bb81a8
<1> [88.829438] #PF: supervisor read access in kernel mode
<1> [88.829447] #PF: error_code(0x0000) - not-present page
<6> [88.829458] PGD 4400067 P4D 4400067 PUD 4566067 PMD 16db4067 PTE 0
<4> [88.829498] Oops: 0000 [#1] PREEMPT SMP NOPTI
<4> [88.829500] CPU: 3 PID: 1160 Comm: debugfs_test Not tainted 6.0.0-rc5-Patchwork_108685v1-gba94ceb672ea+ #1
<4> [88.829500] Hardware name: /D510MO, BIOS MOPNV10J.86A.0311.2010.0802.2346 08/02/2010
<4> [88.829500] RIP: 0010:gen2_read32+0x47/0x1c0 [i915]
<4> [88.829500] Code: 00 00 66 45 85 e4 0f 84 03 01 00 00 41 c1 ec 10 0f 84 20 01 00 00 48 8b 55 00 89 d8 81 fb ff ff 03 00 77 03 03 45 60 48 01 d0 <8b> 28 66 90 65 8b 05 36 12 ee 5f 89 c0 48 0f a3 05 8c 30 74 e2 0f
<4> [88.829500] RSP: 0018:ffffc900005afda8 EFLAGS: 00010282
<4> [88.829500] RAX: ffffc90000bb81a8 RBX: 00000000001381a8 RCX: ffffffffa0134310
<4> [88.829500] RDX: ffffc90000a80000 RSI: 00000000001381a8 RDI: ffff888033f0a908
<4> [88.829500] RBP: ffff888033f0a908 R08: 0000000000000001 R09: 0000000000000001
<4> [88.829500] R10: 00000000cd8c9c94 R11: 00000000fe8b1adf R12: 0000000000000004
<4> [88.829500] R13: 0000000000000001 R14: 0000000000000200 R15: ffff88800ecee200
<4> [88.829500] FS: 00007f8364edc4c0(0000) GS:ffff88803d980000(0000) knlGS:0000000000000000
<4> [88.829500] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [88.829500] CR2: ffffc90000bb81a8 CR3: 0000000009150000 CR4: 00000000000006e0
<4> [88.829500] Call Trace:
<4> [88.829500] <TASK>
<4> [88.829500] perf_limit_reasons_get+0x44/0x70 [i915]
<4> [88.829500] simple_attr_read+0x61/0xf0
<4> [88.829500] ? _raw_spin_lock_irqsave+0x3b/0x50
<4> [88.829500] full_proxy_read+0x4e/0x80
<4> [88.829500] vfs_read+0xc5/0x300
<4> [88.829500] ? _raw_spin_unlock_irqrestore+0x54/0x70
<4> [88.829500] ksys_read+0x57/0xd0
<4> [88.829500] do_syscall_64+0x37/0x90
<4> [88.829500] entry_SYSCALL_64_after_hwframe+0x63/0xcd
<4> [88.829500] RIP: 0033:0x7f83674fd332
<4> [88.829500] Code: 9c 00 00 f7 d8 64 89 02 48 c7 c0 ff ff ff ff eb be 0f 1f 80 00 00 00 00 f3 0f 1e fa 64 8b 04 25 18 00 00 00 85 c0 75 10 0f 05 <48> 3d 00 f0 ff ff 77 56 c3 0f 1f 44 00 00 48 83 ec 28 48 89 54 24
<4> [88.829500] RSP: 002b:00007ffe90e42b18 EFLAGS: 00000246 ORIG_RAX: 0000000000000000
<4> [88.829500] RAX: ffffffffffffffda RBX: 0000555a5864ce30 RCX: 00007f83674fd332
<4> [88.829500] RDX: 0000000000000200 RSI: 00007ffe90e42b50 RDI: 000000000000000b
<4> [88.829500] RBP: 0000000000000001 R08: 0000000000000000 R09: 0000000000000000
<4> [88.829500] R10: 0000000000000000 R11: 0000000000000246 R12: 0000555a57801fd5
<4> [88.829500] R13: 0000555a57801fd4 R14: 000000000000000a R15: 0000555a5864ceeb
<4> [88.829500] </TASK>
<4> [88.829500] Modules linked in: snd_hda_codec_realtek snd_hda_codec_generic ledtrig_audio snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core snd_pcm i915 prime_numbers ttm video wmi drm_buddy drm_display_helper drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops fuse coretemp i2c_i801 i2c_smbus lpc_ich r8169 realtek
<4> [88.829500] CR2: ffffc90000bb81a8
<4> [88.829500] ---[ end trace 0000000000000000 ]---